--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ exportMethods(scale)
 exportMethods(show)
 exportMethods(sin)
 exportMethods(sinh)
+exportMethods(solve)
 exportMethods(sqrt)
 exportMethods(svd)
 exportMethods(sweep)
@@ -116,6 +117,8 @@ useDynLib(float,R_round_spm)
 useDynLib(float,R_scale_spm)
 useDynLib(float,R_sin_spm)
 useDynLib(float,R_sinh_spm)
+useDynLib(float,R_solve_spm)
+useDynLib(float,R_solve_spmspm)
 useDynLib(float,R_spm2mat)
 useDynLib(float,R_sqrt_spm)
 useDynLib(float,R_sub_spm)
