--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ exportMethods(chol)
 exportMethods(cos)
 exportMethods(cosh)
 exportMethods(crossprod)
+exportMethods(diag)
 exportMethods(dim)
 exportMethods(eigen)
 exportMethods(exp)
