--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ exportMethods(asin)
 exportMethods(asinh)
 exportMethods(atan)
 exportMethods(atanh)
+exportMethods(c)
 exportMethods(ceiling)
 exportMethods(chol)
 exportMethods(cos)
