re-add backsolve

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ exportMethods(asin)
 exportMethods(asinh)
 exportMethods(atan)
 exportMethods(atanh)
+exportMethods(backsolve)
 exportMethods(c)
 exportMethods(ceiling)
 exportMethods(chol)
@@ -44,6 +45,7 @@ exportMethods(eigen)
 exportMethods(exp)
 exportMethods(expm1)
 exportMethods(floor)
+exportMethods(forwardsolve)
 exportMethods(gamma)
 exportMethods(is.finite)
 exportMethods(is.infinite)
@@ -82,6 +84,7 @@ useDynLib(float,R_asin_spm)
 useDynLib(float,R_asinh_spm)
 useDynLib(float,R_atan_spm)
 useDynLib(float,R_atanh_spm)
+useDynLib(float,R_backsolve_spm)
 useDynLib(float,R_ceiling_spm)
 useDynLib(float,R_chol_spm)
 useDynLib(float,R_cos_spm)
