--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
 exportMethods(ncol)
+exportMethods(norm)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
@@ -117,6 +118,7 @@ useDynLib(float,R_machine_spm)
 useDynLib(float,R_mat2spm)
 useDynLib(float,R_matmult_spm)
 useDynLib(float,R_mul_spm)
+useDynLib(float,R_norm_spm)
 useDynLib(float,R_pow_spm)
 useDynLib(float,R_round_spm)
 useDynLib(float,R_scale_spm)
