--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ exportMethods(backsolve)
 exportMethods(c)
 exportMethods(ceiling)
 exportMethods(chol)
+exportMethods(colMeans)
+exportMethods(colSums)
 exportMethods(cos)
 exportMethods(cosh)
 exportMethods(crossprod)
@@ -62,6 +64,8 @@ exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
 exportMethods(round)
+exportMethods(rowMeans)
+exportMethods(rowSums)
 exportMethods(scale)
 exportMethods(show)
 exportMethods(sin)
@@ -88,6 +92,8 @@ useDynLib(float,R_atanh_spm)
 useDynLib(float,R_backsolve_spm)
 useDynLib(float,R_ceiling_spm)
 useDynLib(float,R_chol_spm)
+useDynLib(float,R_colMeans_spm)
+useDynLib(float,R_colSums_spm)
 useDynLib(float,R_cos_spm)
 useDynLib(float,R_cosh_spm)
 useDynLib(float,R_crossprod_spm)
@@ -121,6 +127,8 @@ useDynLib(float,R_mul_spm)
 useDynLib(float,R_norm_spm)
 useDynLib(float,R_pow_spm)
 useDynLib(float,R_round_spm)
+useDynLib(float,R_rowMeans_spm)
+useDynLib(float,R_rowSums_spm)
 useDynLib(float,R_scale_spm)
 useDynLib(float,R_sin_spm)
 useDynLib(float,R_sinh_spm)
