re-add na handlers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ exportMethods(forwardsolve)
 exportMethods(gamma)
 exportMethods(is.finite)
 exportMethods(is.infinite)
+exportMethods(is.na)
 exportMethods(is.nan)
 exportMethods(isSymmetric)
 exportMethods(length)
@@ -58,6 +59,8 @@ exportMethods(lgamma)
 exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
+exportMethods(na.exclude)
+exportMethods(na.omit)
 exportMethods(ncol)
 exportMethods(norm)
 exportMethods(nrow)
@@ -85,6 +88,7 @@ useDynLib(float,R_abs_spm)
 useDynLib(float,R_acos_spm)
 useDynLib(float,R_acosh_spm)
 useDynLib(float,R_add_spm)
+useDynLib(float,R_anyNA_spm)
 useDynLib(float,R_asin_spm)
 useDynLib(float,R_asinh_spm)
 useDynLib(float,R_atan_spm)
@@ -113,6 +117,7 @@ useDynLib(float,R_init_NA)
 useDynLib(float,R_isSymmetric_spm)
 useDynLib(float,R_isfinite_spm)
 useDynLib(float,R_isinfinite_spm)
+useDynLib(float,R_isna_spm)
 useDynLib(float,R_isnan_spm)
 useDynLib(float,R_le_spm)
 useDynLib(float,R_lgamma_spm)
@@ -124,6 +129,7 @@ useDynLib(float,R_machine_spm)
 useDynLib(float,R_mat2spm)
 useDynLib(float,R_matmult_spm)
 useDynLib(float,R_mul_spm)
+useDynLib(float,R_naomit_spm)
 useDynLib(float,R_norm_spm)
 useDynLib(float,R_pow_spm)
 useDynLib(float,R_round_spm)
