--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ exportMethods(sin)
 exportMethods(sinh)
 exportMethods(solve)
 exportMethods(sqrt)
+exportMethods(sum)
 exportMethods(svd)
 exportMethods(sweep)
 exportMethods(t)
@@ -143,6 +144,7 @@ useDynLib(float,R_solve_spmspm)
 useDynLib(float,R_spm2mat)
 useDynLib(float,R_sqrt_spm)
 useDynLib(float,R_sub_spm)
+useDynLib(float,R_sum_spm)
 useDynLib(float,R_svd_spm)
 useDynLib(float,R_sweep_spm)
 useDynLib(float,R_symeig_spm)
