--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,8 @@ exportMethods(lgamma)
 exportMethods(log)
 exportMethods(log10)
 exportMethods(log2)
+exportMethods(max)
+exportMethods(min)
 exportMethods(na.exclude)
 exportMethods(na.omit)
 exportMethods(ncol)
@@ -83,6 +85,8 @@ exportMethods(tan)
 exportMethods(tanh)
 exportMethods(tcrossprod)
 exportMethods(trunc)
+exportMethods(which.max)
+exportMethods(which.min)
 import(methods)
 importFrom(utils,capture.output)
 useDynLib(float,R_abs_spm)
@@ -129,6 +133,8 @@ useDynLib(float,R_lt_spm)
 useDynLib(float,R_machine_spm)
 useDynLib(float,R_mat2spm)
 useDynLib(float,R_matmult_spm)
+useDynLib(float,R_max_spm)
+useDynLib(float,R_min_spm)
 useDynLib(float,R_mul_spm)
 useDynLib(float,R_naomit_spm)
 useDynLib(float,R_norm_spm)
@@ -153,4 +159,6 @@ useDynLib(float,R_tanh_spm)
 useDynLib(float,R_tcrossprod_spm)
 useDynLib(float,R_tcrossprod_spmspm)
 useDynLib(float,R_trunc_spm)
+useDynLib(float,R_whichmax_spm)
+useDynLib(float,R_whichmin_spm)
 useDynLib(float,R_xpose_spm)
