--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,9 @@ exportMethods(norm)
 exportMethods(nrow)
 exportMethods(object.size)
 exportMethods(print)
+exportMethods(qr)
+exportMethods(qr.Q)
+exportMethods(qr.R)
 exportMethods(round)
 exportMethods(rowMeans)
 exportMethods(rowSums)
@@ -139,6 +142,9 @@ useDynLib(float,R_mul_spm)
 useDynLib(float,R_naomit_spm)
 useDynLib(float,R_norm_spm)
 useDynLib(float,R_pow_spm)
+useDynLib(float,R_qrQ_spm)
+useDynLib(float,R_qrR_spm)
+useDynLib(float,R_qr_spm)
 useDynLib(float,R_round_spm)
 useDynLib(float,R_rowMeans_spm)
 useDynLib(float,R_rowSums_spm)
