add qr.qy, fix qr.Q

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,8 @@ exportMethods(print)
 exportMethods(qr)
 exportMethods(qr.Q)
 exportMethods(qr.R)
+exportMethods(qr.qty)
+exportMethods(qr.qy)
 exportMethods(round)
 exportMethods(rowMeans)
 exportMethods(rowSums)
@@ -145,6 +147,7 @@ useDynLib(float,R_pow_spm)
 useDynLib(float,R_qrQ_spm)
 useDynLib(float,R_qrR_spm)
 useDynLib(float,R_qr_spm)
+useDynLib(float,R_qrqy_spm)
 useDynLib(float,R_round_spm)
 useDynLib(float,R_rowMeans_spm)
 useDynLib(float,R_rowSums_spm)
