--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ exportMethods(qr.Q)
 exportMethods(qr.R)
 exportMethods(qr.qty)
 exportMethods(qr.qy)
+exportMethods(rcond)
 exportMethods(round)
 exportMethods(rowMeans)
 exportMethods(rowSums)
@@ -147,6 +148,7 @@ useDynLib(float,R_qrQ_spm)
 useDynLib(float,R_qrR_spm)
 useDynLib(float,R_qr_spm)
 useDynLib(float,R_qrqy_spm)
+useDynLib(float,R_rcond_spm)
 useDynLib(float,R_round_spm)
 useDynLib(float,R_rowMeans_spm)
 useDynLib(float,R_rowSums_spm)
