--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ exportMethods(backsolve)
 exportMethods(c)
 exportMethods(ceiling)
 exportMethods(chol)
+exportMethods(chol2inv)
 exportMethods(colMeans)
 exportMethods(colSums)
 exportMethods(cos)
@@ -105,6 +106,7 @@ useDynLib(float,R_atan_spm)
 useDynLib(float,R_atanh_spm)
 useDynLib(float,R_backsolve_spm)
 useDynLib(float,R_ceiling_spm)
+useDynLib(float,R_chol2inv_spm)
 useDynLib(float,R_chol_spm)
 useDynLib(float,R_colMeans_spm)
 useDynLib(float,R_colSums_spm)
