--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(rbind,float32)
 export(.Machine_float)
 export(dbl)
 export(fl)
+export(float32)
 export(flrand)
 export(flrnorm)
 export(flrunif)
