some more scaffolding

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,8 @@ Description: R comes with a suite of utilities for linear algebra with "numeric"
     single precision 'BLAS' and 'LAPACK', which are automatically built in the
     event they are not available on the system.
 License: BSD 2-clause License + file LICENSE
-Copyright: The copyright for the single precision BLAS/LAPACK
-        distribution located in src/lapack is given in the file
-        src/lapack/LICENSE.
+Copyright: The copyright for the single precision BLAS/LAPACK distribution
+    located in src/lapack is given in the file src/lapack/LICENSE.
 Depends: R (>= 3.1.0), methods
 Imports: utils
 ByteCompile: yes
@@ -29,4 +28,3 @@ Authors@R: c(
     )
 Maintainer: Drew Schmidt <wrathematics@gmail.com>
 RoxygenNote: 5.0.1
-NeedsCompilation: yes
