mv lapack/wrap.f to slapack_wrap.f

--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -24,12 +24,12 @@ R_SOURCES = \
 	qr.o \
 	rand.o \
 	scale.o \
+	slapack_wrap.o \
 	solve.o \
 	sum.o \
 	svd.o \
 	sweep.o \
 	xpose.o \
-	lapack/wrap.o \
 	utils/matmult.o \
 	utils/symmetrize.o \
 	utils/xpose.o
