--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.matrix,float32)
 S3method(as.vector,float32)
 S3method(cbind,float32)
 S3method(rbind,float32)
+S3method(str,float32)
 export(.Machine_float)
 export(dbl)
 export(fl)
@@ -102,6 +103,7 @@ exportMethods(which.max)
 exportMethods(which.min)
 import(methods)
 importFrom(utils,capture.output)
+importFrom(utils,str)
 useDynLib(float,R_abs_spm)
 useDynLib(float,R_acos_spm)
 useDynLib(float,R_acosh_spm)
