--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ exportMethods("==")
 exportMethods(">")
 exportMethods(">=")
 exportMethods("[")
+exportMethods("[<-")
 exportMethods("^")
 exportMethods("dim<-")
 exportMethods(La.svd)
