guard exported C functions from C++ mangler

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,7 +135,8 @@ useDynLib(float,R_flrunif_spm)
 useDynLib(float,R_gamma_spm)
 useDynLib(float,R_ge_spm)
 useDynLib(float,R_gt_spm)
-useDynLib(float,R_init_NA)
+useDynLib(float,R_init_NAf)
+useDynLib(float,R_init_NaNf)
 useDynLib(float,R_isSymmetric_spm)
 useDynLib(float,R_isfinite_spm)
 useDynLib(float,R_isinfinite_spm)
