--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -3,7 +3,7 @@ PKG_FFLAGS = $(SHLIB_OPENMP_FFLAGS)
 PKG_FCFLAGS = $(SHLIB_OPENMP_FCFLAGS)
 PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CFLAGS) $(SHLIB_OPENMP_FCFLAGS)
 
-SLAPACK = utils/matmult.o utils/symmetrize.o utils/xpose.o slapack_wrap.o @ADD_OBJS@
+SLAPACK = slapack_wrap.o @ADD_OBJS@
 
 R_SOURCES = \
 	backsolve.o \
@@ -30,20 +30,17 @@ R_SOURCES = \
 	sum.o \
 	svd.o \
 	sweep.o \
-	xpose.o
+	xpose.o \
+	utils/matmult.o \
+	utils/symmetrize.o \
+	utils/xpose.o 
 
 OBJECTS = $(R_SOURCES) $(SLAPACK)
 
 ### Start making here.
-all: $(SHLIB) libslapack.a
-	mkdir -p ../inst/lib$(R_ARCH)
-	cp libslapack.a ../inst/lib$(R_ARCH)
+all: $(SHLIB)
 
 $(SHLIB): $(OBJECTS)
-
-libslapack.a: $(SHLIB)
-	$(AR) cr libslapack.a $(SLAPACK)
-	$(RANLIB) libslapack.a
 
 clean:
 	rm -rf *.o *.d *.rc *.so* *.dll *.dylib *.a *.lib
