add skeleton support for names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,11 @@ exportMethods(">=")
 exportMethods("[")
 exportMethods("[<-")
 exportMethods("^")
+exportMethods("colnames<-")
 exportMethods("dim<-")
+exportMethods("dimnames<-")
+exportMethods("names<-")
+exportMethods("rownames<-")
 exportMethods(La.svd)
 exportMethods(NCOL)
 exportMethods(NROW)
@@ -46,11 +50,13 @@ exportMethods(chol)
 exportMethods(chol2inv)
 exportMethods(colMeans)
 exportMethods(colSums)
+exportMethods(colnames)
 exportMethods(cos)
 exportMethods(cosh)
 exportMethods(crossprod)
 exportMethods(diag)
 exportMethods(dim)
+exportMethods(dimnames)
 exportMethods(eigen)
 exportMethods(exp)
 exportMethods(expm1)
@@ -71,6 +77,7 @@ exportMethods(max)
 exportMethods(min)
 exportMethods(na.exclude)
 exportMethods(na.omit)
+exportMethods(names)
 exportMethods(ncol)
 exportMethods(norm)
 exportMethods(nrow)
@@ -84,6 +91,7 @@ exportMethods(rcond)
 exportMethods(round)
 exportMethods(rowMeans)
 exportMethods(rowSums)
+exportMethods(rownames)
 exportMethods(scale)
 exportMethods(show)
 exportMethods(sin)
