--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -33,14 +33,29 @@ R_SOURCES = \
 	xpose.o \
 	utils/matmult.o \
 	utils/symmetrize.o \
-	utils/xpose.o 
+	utils/xpose.o
 
 OBJECTS = $(R_SOURCES) $(SLAPACK)
 
 ### Start making here.
-all: $(SHLIB)
+all: $(SHLIB) buildStaticLib
 
 $(SHLIB): $(OBJECTS)
+
+
+
+LIBPATH = ../inst/lib
+STATICLIB =	libfloat.a
+
+buildStaticLib: $(STATICLIB)
+	-@if test ! -e $(LIBPATH)$(R_ARCH); then mkdir -p $(LIBPATH)$(R_ARCH); fi
+	cp $(STATICLIB) $(LIBPATH)$(R_ARCH)
+	rm $(STATICLIB)
+
+$(STATICLIB): $(OBJECTS)
+		$(AR) qc $(STATICLIB) $^
+
+
 
 clean:
 	rm -rf *.o *.d *.rc *.so* *.dll *.dylib *.a *.lib
