--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,7 +1,6 @@
-PKG_CFLAGS = $(SHLIB_OPENMP_CFLAGS) -I../inst/include/
-PKG_FFLAGS = $(SHLIB_OPENMP_FFLAGS)
-PKG_FCFLAGS = $(SHLIB_OPENMP_FCFLAGS)
-PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CFLAGS) $(SHLIB_OPENMP_FCFLAGS)
+PKG_CFLAGS = @OMPFLAGS_C@ -I../inst/include/
+PKG_FCFLAGS = @OMPFLAGS_FC@
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OMPFLAGS_C@ @OMPFLAGS_FC@
 
 SLAPACK = slapack_wrap.o @ADD_OBJS@
 
