--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,14 +16,11 @@ Description: R comes with a suite of utilities for linear algebra with "numeric"
     'LAPACK', which are automatically built in the event they are not available
     on the system.
 License: BSD 2-clause License + file LICENSE
-Copyright: The copyright for the single precision BLAS/LAPACK distribution
-    located in src/lapack is given in the file src/lapack/LICENSE.
-Depends:
-    R (>= 3.1.0),
-    methods
-Imports:
-    utils,
-    tools
+Copyright: The copyright for the single precision BLAS/LAPACK
+        distribution located in src/lapack is given in the file
+        src/lapack/LICENSE.
+Depends: R (>= 3.1.0), methods
+Imports: utils, tools
 ByteCompile: yes
 URL: https://github.com/wrathematics/float
 BugReports: https://github.com/wrathematics/float/issues
@@ -35,3 +32,4 @@ Authors@R: c(
     )
 Maintainer: Drew Schmidt <wrathematics@gmail.com>
 RoxygenNote: 5.0.1
+NeedsCompilation: yes
