--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,6 +1,6 @@
 PKG_CFLAGS = @OMPFLAGS_C@ -I../inst/include/
 PKG_FCFLAGS = @OMPFLAGS_FC@
-PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OMPFLAGS_C@ @OMPFLAGS_FC@
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OMPFLAGS_FC@
 
 SLAPACK = slapack_wrap.o @ADD_OBJS@
 
