--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ URL: https://github.com/wrathematics/float
 BugReports: https://github.com/wrathematics/float/issues
 Authors@R: c(
     person("Drew", "Schmidt", role=c("aut", "cre", "cph"), email="wrathematics@gmail.com"),
-    person("Wei-Chen", "Chen", role="ctb", comment="win32 fixes"),
+    person("Wei-Chen", "Chen", role="aut"),
     person("Dmitriy", "Selivanov", role="ctb", comment="improvements in external package linking"),
     person("ORNL", role="cph")
     )
