update configure files

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
 AC_PREREQ([2.69])
-AC_INIT(DESCRIPTION)
+AC_INIT
+AC_CONFIG_SRCDIR([DESCRIPTION])
 
 # Get C compiler from R
 : ${R_HOME=`R RHOME`}
@@ -16,7 +17,6 @@ LDFLAGS=`"${R_HOME}/bin/R" CMD config LDFLAGS`
 
 
 AC_PROG_CC
-AC_PROG_CC_C99
 AC_PROG_CXX
 AC_CHECK_LIB(m, [sinf], [], 
   [AC_MSG_ERROR([float math functions unavailable])]
@@ -159,8 +159,10 @@ echo " "
 
 
 AC_SUBST(BOBE)
-AC_OUTPUT(src/endianness.h)
+AC_CONFIG_FILES([src/endianness.h])
+AC_OUTPUT
 
 AC_SUBST(ADD_OBJS)
 AC_SUBST(OMPFLAGS_C)
-AC_OUTPUT(src/Makevars)
+AC_CONFIG_FILES([src/Makevars])
+AC_OUTPUT
