--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,4 +1,5 @@
 PKG_CFLAGS = @OMPFLAGS_C@ -I../inst/include/
+PKG_FFLAGS = @OMPFLAGS_F@ $(SAFE_FFLAGS)
 PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OMPFLAGS_C@
 
 SLAPACK = slapack_wrap.o @ADD_OBJS@
@@ -40,6 +41,8 @@ STATICLIB = libfloat.a
 
 ### Start making here.
 all: $(SHLIB) $(STATICLIB)
+
+@ADD_DEPS@
 
 $(SHLIB): $(OBJECTS)
 
