fix new config break

--- a/configure.ac
+++ b/configure.ac
@@ -79,8 +79,8 @@ LDFLAGS=`"${R_HOME}/bin/R" CMD config LDFLAGS`
 
 # Obtain BLAS/LAPACK libs from R.
 R_SCMD="${R_HOME}/bin/R CMD config"
-BLAS_LIBFLAGS=`${R_SCMD} BLAS_LIBFLAGS`
-LAPACK_LIBFLAGS=`${R_SCMD} LAPACK_LIBFLAGS`
+BLAS_LIBFLAGS=`${R_SCMD} BLAS_LIBS`
+LAPACK_LIBFLAGS=`${R_SCMD} LAPACK_LIBS`
 
 # Check libRblas and libRlapack first
 HAVE_SP_BLAS="no"
